added plugins to build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,29 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
+
+javafx {
+    version = "15.0.1"
+    modules = [ 'javafx.controls','javafx.fxml' ]
+}
 
 
 repositories {
     mavenCentral()
 }
 
+
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+
 }
+
+
 
 test {
     useJUnitPlatform()
 }
+
+mainClassName = 'GuiMain'
