--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ repositories {
 
 dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-1.2-api', version: '2.14.1'
 }
 
 
